feat: search engine, docker update: transaction, cache module

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
-DATABASE_URL=
-SALT_ROUNDS=
-SECRET=
+DATABASE_URL=postgres://postgres:root@127.0.0.1:5432/storage
+MEILI_HOST=http://127.0.0.1:7700
+REDIS_URL=redis://@localhost:6379
+SALT_ROUNDS=10
+
+SEED_ADMIN_PASSWORD=
+SEED_ADMIN_EMAIL
