--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint:fix": "eslint . --ext .ts --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -22,7 +23,8 @@
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
     "@fastify/static": "^8.0.4",
-    "@nestjs/cache-manager": "^3.0.0",
+    "@keyv/redis": "^4.3.2",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.4",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.4",
@@ -30,9 +32,11 @@
     "@nestjs/swagger": "^11.0.2",
     "@prisma/client": "^6.2.1",
     "bcrypt": "^5.1.1",
-    "cache-manager": "^6.4.0",
+    "cache-manager": "^6.4.1",
+    "cache-manager-redis-yet": "^5.1.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "meilisearch": "^0.49.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -40,6 +44,8 @@
     "@nestjs/cli": "^11.0.2",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.4",
+    "@swc/cli": "^0.6.0",
+    "@swc/core": "^1.11.16",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
