--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,11 @@
     "target": "ES2021",
     "sourceMap": true,
     "outDir": "./dist",
+    "exclude": [
+      "node_modules",
+      "dist",
+      "coverage"
+    ],
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
