--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,24 @@ server {
     listen 80;
     server_name api.yohocx.store;
 
+    location /.well-known/acme-challenge/ {
+        root /var/www/html;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name api.yohocx.store;
+
+    ssl_certificate /etc/letsencrypt/live/api.yohocx.store/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.yohocx.store/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
     location / {
         proxy_pass http://nodejs:3000;
         proxy_set_header Host $host;
