--- a/nginx.conf
+++ b/nginx.conf
@@ -1,29 +1,40 @@
-server {
-    listen 80;
-    server_name api.yohocx.store;
+worker_processes 1;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/html;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
+events {
+    worker_connections 1024;
 }
 
-server {
-    listen 443 ssl;
-    server_name api.yohocx.store;
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    ssl_certificate /etc/letsencrypt/live/api.yohocx.store/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api.yohocx.store/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    server {
+        listen 80;
+        server_name api.yohocx.store;
 
-    location / {
-        proxy_pass http://nodejs:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name api.yohocx.store;
+
+        ssl_certificate /etc/letsencrypt/live/api.yohocx.store/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/api.yohocx.store/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+        location / {
+            proxy_pass http://nodejs:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
     }
 }
