--- a/nginx.conf
+++ b/nginx.conf
@@ -1,40 +1,29 @@
-worker_processes 1;
+# HTTP - Redirect all traffic to HTTPS
+server {
+    listen 80;
+    server_name api.yohocx.store;
 
-events {
-    worker_connections 1024;
+    # Redirect HTTP to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+# HTTPS - Serve the Node.js app
+server {
+    listen 443 ssl;
+    server_name api.yohocx.store;
 
-    server {
-        listen 80;
-        server_name api.yohocx.store;
+    # SSL Configuration (replace with your certificates)
+    ssl_certificate /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-
-        location / {
-            return 301 https://$host$request_uri;
-        }
-    }
-
-    server {
-        listen 443 ssl;
-        server_name api.yohocx.store;
-
-        ssl_certificate /etc/letsencrypt/live/api.yohocx.store/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/api.yohocx.store/privkey.pem;
-        include /etc/letsencrypt/options-ssl-nginx.conf;
-        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-        location / {
-            proxy_pass http://nodejs:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
+    # Proxy requests to Node.js
+    location / {
+        proxy_pass http://nodejs:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;  # For SSL context awareness
     }
 }
