--- a/nginx.conf
+++ b/nginx.conf
@@ -1,29 +1,31 @@
-# HTTP - Redirect all traffic to HTTPS
-server {
-    listen 80;
-    server_name api.yohocx.store;
+http {
+    # HTTP - Redirect all traffic to HTTPS
+    server {
+        listen 80;
+        server_name api.yohocx.store;
 
-    # Redirect HTTP to HTTPS
-    location / {
-        return 301 https://$host$request_uri;
+        # Redirect HTTP to HTTPS
+        location / {
+            return 301 https://$host$request_uri;
+        }
     }
-}
 
-# HTTPS - Serve the Node.js app
-server {
-    listen 443 ssl;
-    server_name api.yohocx.store;
+    # HTTPS - Serve the Node.js app
+    server {
+        listen 443 ssl;
+        server_name api.yohocx.store;
 
-    # SSL Configuration (replace with your certificates)
-    ssl_certificate /etc/nginx/ssl/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+        # SSL Configuration (replace with your certificates)
+        ssl_certificate /etc/nginx/ssl/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
-    # Proxy requests to Node.js
-    location / {
-        proxy_pass http://nodejs:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;  # For SSL context awareness
+        # Proxy requests to Node.js
+        location / {
+            proxy_pass http://nodejs:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;  # For SSL context awareness
+        }
     }
 }
