--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,8 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - /etc/letsencrypt/live/api.yohocx.store/fullchain.pem:/etc/nginx/ssl/fullchain.pem
+      - /etc/letsencrypt/live/api.yohocx.store/privkey.pem:/etc/nginx/ssl/privkey.pem
     depends_on:
       - nodejs
     networks:
