--- a/nginx.conf
+++ b/nginx.conf
@@ -1,31 +1,47 @@
+worker_processes 1;
+
+events {
+    worker_connections 1024;
+}
+
 http {
-    # HTTP - Redirect all traffic to HTTPS
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+    error_log   /var/log/nginx/error.log;
+
+    sendfile        on;
+    tcp_nopush     on;
+    tcp_nodelay    on;
+    keepalive_timeout  65;
+    types_hash_max_size 2048;
+
     server {
         listen 80;
         server_name api.yohocx.store;
 
-        # Redirect HTTP to HTTPS
         location / {
             return 301 https://$host$request_uri;
         }
     }
 
-    # HTTPS - Serve the Node.js app
     server {
         listen 443 ssl;
         server_name api.yohocx.store;
 
-        # SSL Configuration (replace with your certificates)
         ssl_certificate /etc/nginx/ssl/fullchain.pem;
         ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
-        # Proxy requests to Node.js
         location / {
             proxy_pass http://nodejs:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;  # For SSL context awareness
         }
     }
 }
