update: nginx conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -22,6 +22,15 @@ http {
     types_hash_max_size 2048;
 
     server {
+        listen 80;
+        server_name api.yohocx.store;
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
         listen 443 ssl;
         server_name api.yohocx.store;
 
