--- a/nginx.conf
+++ b/nginx.conf
@@ -38,7 +38,7 @@ http {
         ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
         location / {
-            proxy_pass http://nodejs:3000;
+            proxy_pass https://nodejs:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
