--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy:
     name: Deploy to Server
-    runs-on: ubuntu-latest
+    runs-on: debian-latest
 
     steps:
       - name: Check out repository
@@ -20,16 +20,10 @@ jobs:
           echo "${{ secrets.GIT_SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan github.com >> ~/.ssh/known_hosts
-
-      - name: Add server SSH key to known hosts
-        run: |
-          ssh-keyscan -H 138.199.230.194 >> ~/.ssh/known_hosts
+          ssh-keyscan -H "${{ secrets.HOST }}" >> ~/.ssh/known_hosts
+          echo "SSH setup complete."
 
       - name: Deploy via SSH
         run: |
-          ssh -i ~/.ssh/id_ed25519 root@138.199.230.194 << 'EOF'
-            cd /root/storage
-            git pull origin main
-            docker-compose down
-            docker-compose up -d --build
-          EOF
+          echo "Starting deployment on server: ${{ secrets.HOST }}"
+          ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=no ${{secrets.SSH_USERNAME}}@${{ secrets.HOST }} "cd ${{ secrets.PROJECT_PATH }} && git pull origin main && docker-compose down && docker-compose up -d --build"
