--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,9 @@ jobs:
 
       - name: Deploy to server
         run:
-          ssh -o StrictHostKeyChecking=no -t ${{ secrets.USERNAME }}@${{ secrets.HOST }}
-          
-          #          cd ${{ secrets.PROJECT_PATH }}  # Navigate to your project directory
-          #          git pull origin main  # Pull latest changes from main branch
-          #          docker-compose down  # Stop and remove containers
-          #          docker-compose up -d  # Rebuild and start containers in detached mode
+          ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} \
+          "cd ${{ secrets.PROJECT_PATH }} && \
+          git pull origin main && \
+          docker-compose down && \
+          docker-compose up -d --build"
           
