--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,6 @@ jobs:
             echo "Deploying to ${{ secrets.HOST }} as ${{ secrets.USERNAME }}"
             cd ${{ secrets.PROJECT_PATH }}
             git pull origin main
-            docker-compose down
-            docker-compose up -d --build
+            docker compose down
+            docker compose up -d --build
           EOF
